--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -818,7 +818,7 @@ input[type="search"] {
   position: relative;
   top: -45px;
   color: #fff;
-  max-height: 1360px;
+  max-heigh: 1360px;
   padding-top: 130px;
 }
 
@@ -2513,7 +2513,7 @@ input[type="search"] {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    align-items: center;
+    align-item: center;
     padding-bottom: 30px;
   }
 
